// Generated by srotoc. DO NOT EDIT!

syntax = "proto3";

package composed_fields_example;

import "google/api/field_behavior.proto";
import "validate/validate.proto";

message User {
    string nickname = 1 [
        (validate.rules) = {string: {max_len: 50, min_len: 3}}
    ];
    string user_id = 2 [(validate.rules).string.uuid = true];
    string tenant_id = 3 [
        (google.api.field_behavior) = REQUIRED,
        (validate.rules).string.uuid = true
    ];
}
